--- a/app/app/config/parameters.yml
+++ b/app/app/config/parameters.yml
@@ -1,8 +1,8 @@
 # This file is auto-generated during the composer install
 parameters:
-     database_host: 127.0.0.1
+     database_host: service_mysql
      database_port: null
      database_name: pharmacie
      database_user: root
-     database_password: null
+     database_password: root
      mailer_transport: smtp
